--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
